# rude

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  cliff.toml  codecov.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench-pr.yml  bench.yml  ci.yml  release.yml
benches/comparative/: compare.py
benches/corpus/: download.py
benches/python/: bench_linter.py  bench_node.py  bench_semantic.py  conftest.py
benches/rust/: analyzer.rs  grouping.rs
docs/: changelog.md  coding-assistants.md  conf.py  contributing.md  index.md
docs/_static/: custom.css  tagline.js
docs/_templates/sidebar/: brand.html
docs/api/: core.md  providers.md  rules.md  semantic.md
docs/guide/: architecture.md  ci-integration.md  cli.md  comparison.md  configuration.md  custom-rules.md  faq.md  installation.md  metadata-providers.md  migrating-from-flake8.md  plugin-development.md  quickstart.md  severity.md
docs/rules/: index.md
examples/rules/: README.md
examples/rules/hygiene/: __init__.py
examples/rules/patterns/: __init__.py
examples/rules/templates/: __init__.py
python/rude/: __init__.py  __main__.py  _rust.pyi  cli.py  testing.py  utils.py
python/rude/core/: __init__.py  config.py  file_finder.py  import_edits.py  linter.py  node.py  node_types.py  parser.py  rule.py  rule_discovery.py  types.py
python/rude/providers/: __init__.py  semantic.py
python/rude/rules/: __init__.py
python/rude/rules/mccabe/: __init__.py  complexity.py
python/rude/rules/pycodestyle/: __init__.py  blank_lines.py  comparison.py  imports.py  indentation.py  line_length.py  statements.py  warnings.py  whitespace.py
python/rude/rules/pyflakes/: __init__.py  annotations.py  control_flow.py  docstrings.py  format_strings.py  imports.py  literals.py  names.py  syntax.py  variables.py
scripts/: check_version_consistency.py  generate_node_types.py
src/: analyzer.rs  binding.rs  import_info.rs  lib.rs  model.rs  node_ids.rs  scope.rs  ts.rs
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_line_infos.py  test_linter_errors.py  test_linter_streaming.py  test_linter_unregister.py  test_metadata_deps.py  test_multiprocess.py  test_public_api.py  test_rule_config.py  test_rule_discovery.py  test_style_flags.py  test_testing_helpers.py  test_utils.py
tests/core/: test_debug.py  test_file_finder.py  test_fixes.py  test_import_edits.py  test_node.py  test_node_ergonomics.py  test_node_types.py  test_noqa.py  test_pathological_inputs.py  test_rule_fixes.py
tests/providers/: __init__.py  test_semantic.py  test_semantic_rust.py
tests/rules/: __init__.py
tests/rules/mccabe/: __init__.py  test_complexity.py
tests/rules/pycodestyle/: __init__.py  test_blank_lines.py  test_comparison.py  test_imports.py  test_indentation.py  test_line_length.py  test_statements.py  test_warnings.py  test_whitespace.py
tests/rules/pyflakes/: __init__.py  test_annotations.py  test_control_flow.py  test_docstrings.py  test_format_strings.py  test_imports.py  test_literals.py  test_names.py  test_syntax.py  test_variables.py
tests/rules/templates/: __init__.py  test_templates.py
