[package]
name = "rude-native"
version = "0.1.0-alpha.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Rust-powered semantic analyzer for the rude Python linter."
repository = "https://github.com/rude-dev/rude"
homepage = "https://github.com/rude-dev/rude"
documentation = "https://rude.readthedocs.io"
publish = false

[lib]
name = "rude"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py311"] }
rayon = "1.11"
rustc-hash = "2.1"
tree-sitter = "0.25"
tree-sitter-python = "0.25"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "analyzer"
harness = false
path = "benches/rust/analyzer.rs"

[[bench]]
name = "grouping"
harness = false
path = "benches/rust/grouping.rs"
